0.6.4.14
Issue 668 consistent location for license file

0.6.4.13
Do not fail on missing Web.Config

0.6.4.12
Issue #669 ensure asp.net Core requestTimeout is set to interactionTimeout
Set WebServiceInstance in ServiceSettings.ps1 is using Traefik
Support connecting to test runner from host (-connectFromHost) for debugging purposes (Fiddler support)
Add additional debugging information in Run-TestsInBCContainer when using -debugMode

0.6.4.11
Support ExtensionId and DisabledTests on Get-Tests and Run-Tests on AL test Runner

0.6.4.10
Change ACME implementation to ACME-PS (supporting ACME.v2)
Issue 660 Run-TestsInBCContainer doesn't output correctly when running as non-administrator

0.6.4.9
Default usePublicWebBaseUrl to $true if the container was started with useTraefik

0.6.4.8
Default useTraefik to $true if Traefik container is created and initialized

0.6.4.7
Issue #649 Setup-NavContainerTestUsers regression

0.6.4.6
Fix issue #642 - Invoke-NavContainerCodeunit cannot be used in 15.x containers
Fix issue #643 - Get-TestsFromBcContainer sometimes fails running as non-administrator
Fix issue #644 - -useCleanDatabase and -useNewDatabase get ignored if -includeAL isn't specified
Add ReplaceDependencies to Setup-NavContainerTestUsers
Support 15.x app in Setup-NavContainerTestUsers

0.6.4.5
Remove Parameter Set on Create-AlProjectFolderFromNavContainer - has caused confusion and blocks defaulting of id, publisher etc.
BugFix: ImportTestToolkitToNavContainer running as non-administrator in 15.x containers fails
Change New-NavContainer to accept containernames longer than 15 characters - change error to warning
Add parameter doNotIncludeStoppedContainers to Test-NavContainer

0.6.4.4
Add -usePublicWebBaseUrl to Get-TestsFromBcContainer and Run-TestsInBcContainer to use the public Web Base Url instead of localhost
Added function Sort-AppFoldersByDependencies

0.6.4.3